--- a/Style.css
+++ b/Style.css
@@ -102,3 +102,8 @@ body{
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+  .navbar-home ul li{
+	display:inline-block;
+	vertical-align: top;
+
+  }
